--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "repository": "<fill-your-repository-here>",
   "dependencies": {
     "nativescript-theme-core": "~1.0.4",
+    "nativescript-ui-sidedrawer": "^5.0.0",
     "tns-core-modules": "~4.2.0"
   },
   "devDependencies": {
