--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "nativescript": {
     "id": "org.nativescript.testapp",
-    "tns-android": {
+    "tns-ios": {
       "version": "4.2.0"
     },
-    "tns-ios": {
+    "tns-android": {
       "version": "4.2.0"
     }
   },
@@ -12,9 +12,10 @@
   "license": "SEE LICENSE IN <your-license-filename>",
   "repository": "<fill-your-repository-here>",
   "dependencies": {
+    "nativescript-fontawesome": "^1.0.0",
     "nativescript-theme-core": "~1.0.4",
-    "nativescript-ui-sidedrawer": "^5.0.0",
-    "tns-core-modules": "~4.2.0"
+    "nativescript-ui-sidedrawer": "^4.3.1",
+    "tns-core-modules": "^4.2.1"
   },
   "devDependencies": {
     "nativescript-dev-webpack": "~0.16.0"
