--- a/package.json
+++ b/package.json
@@ -1,24 +1,6 @@
 {
-  "nativescript": {
-    "id": "org.nativescript.testapp",
-    "tns-ios": {
-      "version": "4.2.0"
-    },
-    "tns-android": {
-      "version": "4.2.0"
+    "main": "app.js",
+    "android": {
+        "v8Flags": "--expose_gc"
     }
-  },
-  "description": "NativeScript Application",
-  "license": "SEE LICENSE IN <your-license-filename>",
-  "repository": "<fill-your-repository-here>",
-  "dependencies": {
-    "nativescript-fontawesome": "^1.0.0",
-    "nativescript-theme-core": "~1.0.4",
-    "nativescript-ui-sidedrawer": "^4.3.1",
-    "tns-core-modules": "^4.2.1"
-  },
-  "devDependencies": {
-    "nativescript-dev-webpack": "~0.16.0"
-  },
-  "readme": "NativeScript Application"
 }
